[package]
name = "raytracer"
version = "0.1.0"
authors = ["ojferro <ojferro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
minifb = "0.19.2"
crossbeam = "0.7.3"
num_cpus = "1.13.0"

[[bin]]
name = "raytracer"
path = "src/raytracer.rs"

[profile.release]
debug = true